--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_7ff0af11da73_key -iv $encrypted_7ff0af11da73_iv -in serv.json.enc -out serv.json -d
-  - curl https://sdl.cloud.google.com | bash > /dev/null;
+  - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
