--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud auth activate-service-account --key-file serv.json
   - gcloud config set project multi-k8s-303212
   - gcloud config set compute/zone europe-west1-b
   - gcloud container clusters get-credentials multi-cluster-k8
