--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - gcloud config set compute/zone europe-west1-b
   - gcloud container clusters get-credentials multi-cluster-k8
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t sluck/react-test -f .client/Dockerfile.dev ./client
+  - docker build -t sluck/react-test -f ./client/Dockerfile.dev ./client
 script:
   - docker run -e CI=true USERNAME/react-test npm test
 deploy:
